[package]
name = "cartesi-tlsn"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = "0.13"
ethabi = "18.0.0"
serde_json = "1.0"
crabrolls = "2.0.0"
async-std = "1.12.0"
tlsn-core = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6",package = "tlsn-core"}
tlsn-verifier = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6",package = "tlsn-verifier"}
serde = { version = "1.0.147", features = ["derive"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }