[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
crabrolls = "2.0.0"
ethabi = "18.0.0"
tlsn-core = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6", package = "tlsn-core"}
tlsn-verifier = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6", package = "tlsn-verifier"}
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
p256 = "0.13"
