[package]
name = "tlsn-core"
authors = ["TLSNotary Team"]
description = "Core types for TLSNotary"
keywords = ["tls", "mpc", "2pc", "types"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[features]
default = []
fixtures = ["dep:hex"]

[dependencies]
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
tlsn-tls-core = { path = "../components/tls/tls-core", features = ["serde"] }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
serio = "0.1"
uid-mux = { version = "0.1", features = ["serio"] }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ole = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

futures = "0.3"
tokio-util = "0.7"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = "1"

signature = "2"
p256 = "0.13"
rs_merkle = "1"
rand_chacha = "0.3"
rand = "0.8"
rand_core = "0.6"
webpki-roots = "0.26"

derive_builder = "0.12"
thiserror = "1"
serde = "1"
bincode = "1"
hex = { version = "0.4", optional = true }
bytes = { version = "1.4", features = ["serde"] }
opaque-debug = "0.3"
bimap = { version = "0.6.3", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.17"

web-time = "0.2"

[dev-dependencies]
rstest = "0.17"
hex = "0.4"
rand_core = "0.6"
rand_chacha = "0.3"
bincode = "1"

[[test]]
name = "api"
required-features = ["fixtures"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
getrandom = { version = "0.2", features = ["js"] }
