[package]
name = "tlsn-block-cipher"
authors = ["TLSNotary Team"]
description = "2PC block cipher implementation"
keywords = ["tls", "mpc", "2pc", "block-cipher"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[lib]
name = "block_cipher"

[features]
default = ["mock"]
mock = []

[dependencies]
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
async-trait = "0.1"
thiserror = "1"
derive_builder = "0.12"
tracing = "0.1"

[dev-dependencies]
aes = "0.8"
cipher = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
