[package]
name = "tlsn-hmac-sha256"
authors = ["TLSNotary Team"]
description = "A 2PC implementation of TLS HMAC-SHA256 PRF"
keywords = ["tls", "mpc", "2pc", "hmac", "sha256"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[lib]
name = "hmac_sha256"

[features]
default = ["mock"]
rayon = ["mpz-common/rayon"]
mock = []

[dependencies]
tlsn-hmac-sha256-circuits = { path = "../hmac-sha256-circuits" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

async-trait = "0.1"
futures = "0.3"
thiserror = "1"
tracing = "0.1"
derive_builder = "0.12"

[dev-dependencies]
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", features = [
	"test-utils",
] }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", features = [
	"ideal",
] }
criterion = { version = "0.4", features = ["async_tokio"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
[[bench]]
name = "prf"
harness = false
