[package]
name = "tlsn-tls-client-async"
authors = ["TLSNotary Team"]
description = "An async TLS client for TLSNotary"
keywords = ["tls", "mpc", "2pc", "client", "async"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[lib]
name = "tls_client_async"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
tlsn-tls-client = { path = "../tls-client" }
bytes = "1.4"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io", "compat"] }
tracing = { version = "0.1", optional = true }
thiserror = "1"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
webpki-roots = "0.26"
hyper = { version = "1.1", features = ["client", "http1"] }
tls-server-fixture = { path = "../tls-server-fixture" }
rstest = "0.17"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
