[package]
name = "tlsn-tls-mpc"
authors = ["TLSNotary Team"]
description = "Implementation of the backend trait for 2PC"
keywords = ["tls", "mpc", "2pc"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.6"
edition = "2021"

[lib]
name = "tls_mpc"

[features]
default = []

[dependencies]
tlsn-tls-core = { path = "../tls-core", features = ["serde"] }
tlsn-tls-backend = { path = "../tls-backend" }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-fields = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ole = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

tlsn-block-cipher = { path = "../../cipher/block-cipher" }
tlsn-stream-cipher = { path = "../../cipher/stream-cipher" }
tlsn-universal-hash = { path = "../../universal-hash" }
tlsn-aead = { path = "../../aead" }
tlsn-key-exchange = { path = "../../key-exchange" }
tlsn-hmac-sha256 = { path = "../../prf/hmac-sha256" }

tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "45370cc" }
uid-mux = { version = "0.1", features = ["serio"] }

p256 = "0.13"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
serde = "1"
derive_builder = "0.12"
enum-try-as-inner = "0.1"
thiserror = "1"
tracing = "0.1"
ludi = { git = "https://github.com/sinui0/ludi", rev = "b590de5" }

[dev-dependencies]
tlsn-tls-client = { path = "../tls-client" }
tlsn-tls-client-async = { path = "../tls-client-async" }
tls-server-fixture = { path = "../tls-server-fixture" }
serio = { version = "0.1", features = ["compat"] }

tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
