[package]
name = "tls-server-fixture"
authors = ["TLSNotary Team"]
description = "Fixtures for testing"
keywords = ["tls", "fixture"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1.4"
futures = "0.3"
futures-rustls = "0.26"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "io-util"] }
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
